# cpp_buffer

./: .gitignore  CMakeLists.txt  README.md
include/cpp_buffer/: buffer.h  buffer_assert.h  buffer_definitions.h
src/: buffer_assert.cpp
test/: main.cpp
tests/: main.cpp
